--- a/app/bochito-oro/main.html
+++ b/app/bochito-oro/main.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/bocho-oro/style-flex.css" />
+    <link rel="stylesheet" href="../../css/bocho-oro/style-footer.css">
+    <link rel="stylesheet" href="../../css/bocho-oro/style-nav.css" />
     <style>
       * {
         box-sizing: border-box;
@@ -50,9 +52,8 @@
 
       footer {
         width: 100%;
-        height: 200px;
         z-index: 2;
-        padding: 20px;
+        padding: 80px 40px;
         background-color: #3ab395;
       }
 
@@ -154,9 +155,85 @@
     </style>
   </head>
   <body>
-    <nav>nav</nav>
+    <nav>
+      <div class="icon">
+        <img src="../../assets/bocho-oro/icon.png" alt="icon" />
+      </div>
+      <div class="menu">
+        <div class="profile">
+          <div class="profile-menu">
+            <div class="card-prfile">
+              <a href="#">Profile</a>
+            </div>
+            <div class="card-prfile">
+              <a href="#">Salir</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
     <main>
-      <section class="slide">slide</section>
+      <section class="slide">
+        <div class="card-title">
+          <p>Marca y Modelo</p>
+          <div class="card-body">
+            <div>
+              <a href="">Automoviles</a>
+              <a href="">Lotes</a>
+              <a href="">Sucursales</a>
+              <a href="">Proveedores</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-title">
+          <p>Precio</p>
+          <div class="card-body">
+            <div>
+              <a href="">Automoviles</a>
+              <a href="">Lotes</a>
+              <a href="">Sucursales</a>
+              <a href="">Proveedores</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-title">
+          <p>Tipo</p>
+          <div class="card-body">
+            <div>
+              <a href="">Automoviles</a>
+              <a href="">Lotes</a>
+              <a href="">Sucursales</a>
+              <a href="">Proveedores</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-title">
+          <p>Transmision</p>
+          <div class="card-body">
+            <div>
+              <a href="">Automoviles</a>
+              <a href="">Lotes</a>
+              <a href="">Sucursales</a>
+              <a href="">Proveedores</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card-title">
+          <p>Color</p>
+          <div class="card-body">
+            <div>
+              <a href="">Automoviles</a>
+              <a href="">Lotes</a>
+              <a href="">Sucursales</a>
+              <a href="">Proveedores</a>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="main">
 
         <!-- inicio -->
@@ -464,9 +541,199 @@
         </div>
         <!-- fin -->
 
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
+         <!-- inicio -->
+         <div class="card-car col-3">
+          <div class="card-card">
+            <div class="card-car-img">
+              <div
+                class="img"
+                style="background-image: url('../../assets/bocho-oro/1.png')"
+              ></div>
+            </div>
+            <div class="card-car-desc">
+              <p class="text card-car-desc-title">Seat Ibiza Xcellence</p>
+              <p class="text card-car-desc-esx">2018 - 60,200 km - Torreón</p>
+              <p class="text card-car-desc-price">Desde $3,937/mes</p>
+              <p class="text card-car-desc-contado">Contado $291,999</p>
+            </div>
+          </div>
+        </div>
+        <!-- fin -->
+
        
       </section>
     </main>
-    <footer>footer</footer>
+    <footer>
+
+      <div class="container-footer">
+        <div class="col-3 footer-img">
+         <img src="../../assets/bocho-oro/icon.png" alt=""> 
+        </div>
+        <div class="col-3 footer-links">
+          <a href="#">Compra un auto</a>
+          <a href="#">Paga a meses</a>
+          <a href="#">Vende tu auto</a>
+          <a href="#">App Kavak</a>
+        </div>
+        <div class="col-3 footer-links">
+          <a href="#">Sedes</a>
+          <a href="#">Preguntas frecuentes</a>
+          <a href="#">Testimoniales</a>
+          <a href="#">Blog</a>
+        </div>
+        <div class="col-3 footer-links">
+          <a href="#">Guía de precios</a>
+          <a href="#">Trabaja con nosotros</a>
+          <a href="#">Contacto</a>
+          <a href="#">🇲🇽 México</a>
+        </div>
+      </div>
+
+
+      <hr>
+
+
+      <div class="col-12 footer-footer">
+<p>        Copyright © 2022 KAVAK. Todos los derechos reservados. ·Aviso de Privacidad ·Términos y Condiciones
+</p>
+<p>Uvi Tech, S.A.P.I. de C.V., Carretera Amomolulco - Capulhuac, No. 1 Col. El Panteón, Lerma de Villada, Estado de México, México, C.P. 52005
+</p>      </div>
+
+    </footer>
+    <script src="../../script/bocho-oro/script.js"></script>
+
   </body>
 </html>
