--- a/app/bochito-oro/index.html
+++ b/app/bochito-oro/index.html
@@ -11,42 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../../css/bocho-oro/style.css" />
+    <link rel="stylesheet" href="../../css/bocho-oro/style-index.css" />
     <link rel="stylesheet" href="../../css/bocho-oro/style-nav.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-        /* background-color: rgb(0, 0, 0, 0.1); */
-        font-family: "Poppins", sans-serif;
-      }
-
-      html,
-      body {
-        height: 100%;
-      }
-
-      main {
-        display: flex;
-        flex-wrap: wrap;
-        height: 90%;
-      }
-
-      main #menu {
-        width: 15%;
-        gap: 10px;
-        background-color: #3ab395;
-        height: 100%;
-        padding: 10px 10px;
-        overflow-y: auto;
-      }
-
-      main #main {
-        width: 85%;
-        height: 100%;
-        padding: 20px 50px;
-      }
-    </style>
   </head>
   <body>
     <nav>
@@ -56,6 +23,9 @@
       <div class="menu">
         <div class="profile">
           <div class="profile-menu">
+            <div class="card-prfile">
+              <a href="./main.html">Inicio</a>
+            </div>
             <div class="card-prfile">
               <a href="#">Profile</a>
             </div>
