--- a/app/architects/index.html
+++ b/app/architects/index.html
@@ -19,49 +19,17 @@
     <link rel="stylesheet" href="../../css/architects/style-contact.css" />
 
     <style>
+      .parallax {
+        /* The image used */
 
-.nav-bar-left{
-        width: 20%;
-        height: 90vh;
-        background-color: red;
-        position: -webkit-sticky;
-        position: sticky;
-        top: 50px;
-        padding: 10px;
-      }
-
-      .nav-bar-rigth{
+        /* Set a specific height */
         height: 100%;
-    background-color: blue;
-    display: flex;
-    border-radius: 20px;
-    flex-direction: column;
-    padding: 10px;
-      }
 
-      .div-container-a {
-        height: 2.5rem;
-    background: aqua;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-      }
-      .nav-bar-rigth{
-        width: 80%;
-        background-color: blue;
-        height: 2000PX;
-      }
-
-      .container-nav-bar-left{
-        display: flex;
-    gap: 0.5rem;
-    flex-direction: column;
-      }
-
-      .container-nav-bar-rigth{
-
+        /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
     </style>
   </head>
@@ -82,75 +50,228 @@
       </div>
     </nav>
 
-    <div class="row">
-      <div class="nav-bar-left">
-        <div class="container-nav-bar-left">
+    <!-- first section  -->
+    <section>
+      <div id="container-img" style="height: 800px">
+        <div id="container-text">
+          <h2 class="logo-mx" style="color: white; font-size: 250%">
+            <span><strong>MX</strong></span
+            >Architects
+          </h2>
+        </div>
+        <!-- <img
+          src="../../assets/architects/architect.jpg"
+          alt=""
+          class="col-12"
+        /> -->
+        <div class="parallax" style="background-image: url('../../assets/architects/architect.jpg')"></div>
 
-          <div class="div-container-a">
-            <div class="div-container-a-img">
+      </div>
 
-            </div>
-            <div class="div-container-a-txt">
+    </section>
 
-            </div>
+    <!-- section projects -->
+    <section id="projects" style="background-color: white">
+      <div class="row">
+        <h3 class="col-12" style="font-size: 150%">Projects</h3>
+        <hr class="col-12" />
+
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Summer House</p>
+            <!-- <img
+              src="../../assets/architects/house2.jpg"
+              alt=""
+              class="col-12"
+            /> -->
+
+            <div class="projects-text parallax" style="background-image: url('./../assets/architects/house2.jpg')"></div>
+
           </div>
-
-          <div class="div-container-a">
-            <div class="div-container-a-img">
-
-            </div>
-            <div class="div-container-a-txt">
-
-            </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Brick House</p>
+            <img
+              src="../../assets/architects/house3.jpg"
+              alt=""
+              class="col-12"
+            />
           </div>
-
-          <div class="div-container-a">
-            <div class="div-container-a-img">
-
-            </div>
-            <div class="div-container-a-txt">
-
-            </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Renovated</p>
+            <img
+              src="../../assets/architects/house4.jpg"
+              alt=""
+              class="col-12"
+            />
           </div>
-
-          <div class="div-container-a">
-            <div class="div-container-a-img">
-
-            </div>
-            <div class="div-container-a-txt">
-
-            </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Barn House</p>
+            <img
+              src="../../assets/architects/house5.jpg"
+              alt=""
+              class="col-12"
+            />
           </div>
-
-          <div class="div-container-a">
-            <div class="div-container-a-img">
-
-            </div>
-            <div class="div-container-a-txt">
-
-            </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Summer House</p>
+            <img
+              src="../../assets/architects/house5.jpg"
+              alt=""
+              class="col-12"
+            />
           </div>
-
-          <div class="div-container-a">
-            <div class="div-container-a-img">
-
-            </div>
-            <div class="div-container-a-txt">
-
-            </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Brick House</p>
+            <img
+              src="../../assets/architects/house4.jpg"
+              alt=""
+              class="col-12"
+            />
           </div>
-
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Renovated</p>
+            <img
+              src="../../assets/architects/house3.jpg"
+              alt=""
+              class="col-12"
+            />
+          </div>
+        </div>
+        <div class="col-3 projects-img" style="padding: 10px">
+          <div>
+            <p class="projects-text">Barn House</p>
+            <img
+              src="../../assets/architects/house2.jpg"
+              alt=""
+              class="col-12"
+            />
+          </div>
         </div>
       </div>
-    
-      <main class="nav-bar-rigth">
-        <div class="container-nav-bar-rigth">
-          <p>J</p>
+    </section>
 
+    <!-- section about -->
+    <section id="about" style="background-color: white">
+      <div class="row">
+        <h2 class="col-12">About</h2>
+        <hr class="col-12" />
+        <p class="col-12">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi vitae,
+          odit doloribus porro autem voluptate suscipit soluta, distinctio
+          numquam impedit neque provident a. Et, culpa voluptas quasi sunt harum
+          excepturi! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Illum, obcaecati? Impedit odio, omnis non labore tempora nihil
+          expedita hic quasi, perferendis nobis maiores aperiam quia praesentium
+          laborum? Excepturi, in et. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Tempore similique dolores aspernatur eaque facilis
+          minus voluptates voluptas. Placeat reiciendis, soluta ipsa non
+          voluptatem quos, molestias eaque delectus commodi corporis iusto.
+        </p>
+        <div class="card-about col-3">
+          <img src="../../assets/architects/team2.jpg" alt="" class="col-12" />
+          <h2 class="col-12">John Doe</h2>
+          <p class="col-12 puesto">CEO & Founder</p>
+          <p class="col-12">
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+          <button class="col-12 btn-about">Contact</button>
         </div>
-      </main>
-    </div>
 
+        <div class="card-about col-3">
+          <img src="../../assets/architects/team1.jpg" alt="" class="col-12" />
+          <h2 class="col-12">Jane Doe</h2>
+          <p class="col-12 puesto">Architect</p>
+          <p class="col-12">
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+          <button class="col-12 btn-about">Contact</button>
+        </div>
+
+        <div class="card-about col-3">
+          <img src="../../assets/architects/team3.jpg" alt="" class="col-12" />
+          <h2 class="col-12">Mike Ross</h2>
+          <p class="col-12 puesto">Architect</p>
+          <p class="col-12">
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+          <button class="col-12 btn-about">Contact</button>
+        </div>
+
+        <div class="card-about col-3">
+          <img src="../../assets/architects/team4.jpg" alt="" class="col-12" />
+          <h2 class="col-12">Dan Star</h2>
+          <p class="col-12 puesto">Architect</p>
+          <p class="col-12">
+            Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse
+            sodales pellentesque elementum.
+          </p>
+          <button class="col-12 btn-about">Contact</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- section contatct -->
+    <section id="contact" style="background-color: white">
+      <div class="row">
+        <h2 class="col-12">Contact</h2>
+        <hr class="col-12" />
+
+        <p class="col-12">
+          Lets get in touch and talk about your next project.
+        </p>
+
+        <div class="col-12">
+          <form action="#" method="post">
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="col-12 contact-input"
+              placeholder="Name"
+            />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="col-12 contact-input"
+              placeholder="Email"
+            />
+            <input
+              type="text"
+              name="subject"
+              id="subject"
+              class="col-12 contact-input"
+              placeholder="Suject"
+            />
+            <input
+              type="text"
+              name="comment"
+              id="comment"
+              class="col-12 contact-input"
+              placeholder="Comment"
+            />
+            <button class="btn-contact">SEND MESSAGE</button>
+          </form>
+        </div>
+
+        <img src="../../assets/architects/map.jpg" alt="" class="col-12" />
+      </div>
+    </section>
 
     <!-- footer  -->
 
@@ -165,4 +286,4 @@
   </body>
 </html>
 
-<p ></p>
+<p></p>
